Extend test to G1